# clifford

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
clifford/engine/: claude_llm.py
clifford/frontend/: frontend_chat.py  search.py
clifford/frontend/pages/: review.py
clifford/llama-index/: create_vector_store.py  test_doc_retrieve.ipynb
clifford/llama_store/: create_vector_store.py  ingest_emails.py  retrieve_docs.py  test_doc_retrieve.ipynb
config/: settings.py
data/processed/: example_0.json  example_1.json  example_2.json
notebooks/: LangChain + Claude.ipynb  example_lc_create_data.py  example_lc_enrich.py  example_lc_search.py
