[tool.poetry]
name = "clifford"
version = "0.1.0"
description = "Testing the potential for LLM-powered search to interrogate public government comms records"
authors = ["EH (n.10)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = {extras = ["llms"], version = "^0.0.244"}
streamlit = "^1.25.0"
streamlit-chat = "^0.1.1"
joblib = "^1.3.1"
llama-cpp-python = "^0.1.77"
transformers = "^4.31.0"
sentence-transformers = "^2.2.2"
ipykernel = "^6.25.0"
torch = "^2.0.1"
faiss-cpu = "^1.7.4"
jq = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
